; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_print_str_list.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_print_str_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [2 x i8] c",\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @print_str_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @print_str_list(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8** null, i8*** %6, align 8
  store i8* null, i8** %7, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i8*, i8** %5, align 8
  %13 = call i8** @VAL(i8* %12)
  %14 = icmp ne i8** %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %11, %2
  %16 = call i8* @talloc_strdup(i32* null, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i8* %16, i8** %3, align 8
  br label %46

17:                                               ; preds = %11
  %18 = load i8*, i8** %5, align 8
  %19 = call i8** @VAL(i8* %18)
  store i8** %19, i8*** %6, align 8
  store i32 0, i32* %8, align 4
  br label %20

20:                                               ; preds = %41, %17
  %21 = load i8**, i8*** %6, align 8
  %22 = load i32, i32* %8, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8*, i8** %21, i64 %23
  %25 = load i8*, i8** %24, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %44

27:                                               ; preds = %20
  %28 = load i8*, i8** %7, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %30, label %33

30:                                               ; preds = %27
  %31 = load i8*, i8** %7, align 8
  %32 = call i8* @talloc_strdup_append_buffer(i8* %31, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i8* %32, i8** %7, align 8
  br label %33

33:                                               ; preds = %30, %27
  %34 = load i8*, i8** %7, align 8
  %35 = load i8**, i8*** %6, align 8
  %36 = load i32, i32* %8, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i8*, i8** %35, i64 %37
  %39 = load i8*, i8** %38, align 8
  %40 = call i8* @talloc_strdup_append_buffer(i8* %34, i8* %39)
  store i8* %40, i8** %7, align 8
  br label %41

41:                                               ; preds = %33
  %42 = load i32, i32* %8, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %8, align 4
  br label %20

44:                                               ; preds = %20
  %45 = load i8*, i8** %7, align 8
  store i8* %45, i8** %3, align 8
  br label %46

46:                                               ; preds = %44, %15
  %47 = load i8*, i8** %3, align 8
  ret i8* %47
}

declare dso_local i8** @VAL(i8*) #1

declare dso_local i8* @talloc_strdup(i32*, i8*) #1

declare dso_local i8* @talloc_strdup_append_buffer(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
